fix: update lint script to respect .eslintrc.json overrides
- Changed from 'eslint src/**/*.ts' to 'eslint src --ext .ts'
- This allows .eslintrc.json overrides for test files to work properly
- Test files will now use relaxed ESLint rules as configured

--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "clean": "rimraf dist",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src --ext .ts",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "keywords": [
     "orcdkestrator",
     "plugin",
-    "ssm", "parameter-store", "cleanup", "aws", "orchestration"
+    "ssm",
+    "parameter-store",
+    "cleanup",
+    "aws",
+    "orchestration"
   ],
   "repository": {
     "type": "git",
