fix: remove core from dependencies

--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
   "homepage": "https://github.com/orcdkestrator/orcdk-plugin-ssm-cleanup#readme",
   "license": "MIT",
   "dependencies": {
-    "@aws-sdk/client-ssm": "^3.0.0",
-    "@orcdkestrator/core": "^1.0.0"
+    "@aws-sdk/client-ssm": "^3.0.0"
   },
   "peerDependencies": {
     "@orcdkestrator/core": "^1.0.0"
