--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "rimraf dist",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src/**/*.ts",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "keywords": [
@@ -40,7 +40,7 @@
     "@aws-sdk/client-ssm": "^3.0.0"
   },
   "peerDependencies": {
-    "@orcdkestrator/core": "^1.0.0"
+    "@orcdkestrator/core": "^1.0.2"
   },
   "devDependencies": {
     "@types/jest": "^29.0.0",
