--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CI
 on:
   push:
     branches: [main]
+    tags: ['v*']  # IMPORTANT: Also trigger on tags for release process
   pull_request:
     branches: [main]
 
@@ -15,16 +16,19 @@ jobs:
         node-version: [18.x, 20.x]
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     
     - name: Install dependencies
       run: npm ci
+    
+    - name: Install peer dependencies
+      run: npm install @orcdkestrator/core@latest --no-save
     
     - name: Run linter
       run: npm run lint
